# lightseq

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile.build  LICENSE  MANIFEST.in  NOTICE  README.md  README_HIP.md  README_new.md  build.sh  build_dev.sh  build_scm.sh  build_scm_debug.sh  build_test.sh  build_wheels.sh  example.cu.cc  gemm.cpp  generate.cu.cc  gpt_example.cu.cc  gptlm.cu.cc  log  pyseqlib_test.py  run.sh  setup.py  temp.py  transformer.cu.cc  util.cu.cc  util.h
example/: CMakeLists.txt  decoder_example.cc.cu  decoder_example.cu.cc  gpt_generation.cc.cu  gpt_generation.cu.cc  gptlm_example.cc.cu  gptlm_example.cu.cc  transformer_example.cc.cu  transformer_example.cu.cc  transformer_generate_example.cc.cu  transformer_generate_example.cu.cc
example/cpp/: gptlm_example.cc.cu
example/inference/python/: ls_bart.py  ls_gpt.py
example/python/: gpt_pb2.py  hf_bart_export.py  hf_bart_export_hdf5.py  hf_gpt2_export.py  hf_transformer.py  hf_transformer_export.py  ls_bart.py  ls_bart_time_test.py  ls_gpt.py  ls_gpt_batch.py  ls_gpt_time_test.py  transformer_pb2.py  utils.py
examples/inference/cpp/: CMakeLists.txt  bert_example.cc  decoder_example.cc.cu  gpt_example.cc  gpt_generation.cc.cu  gptlm_example.cc.cu  quant_bert_example.cc  quant_gpt_example.cc  quant_transformer_example.cc  quant_vit_example.cc  transformer_example.cc  transformer_example.cc.cu  transformer_generate_example.cc.cu  vit_example.cc
kernels/: CMakeLists.txt  common.h  gptKernels.cc.cu  gptKernels.cu.cc  gptKernels.h  multilgKernels.cc.cu  multilgKernels.h  nmtKernels.cu.cc  nmtKernels.h  transformerKernels.cc.cu  transformerKernels.cu.cc  transformerKernels.h
lightseq/csrc/: CMakeLists.txt  build.sh
lightseq/csrc/core/: CMakeLists.txt  context.cpp  layer.cpp  manager.cpp  node.cpp  tensor.cpp
lightseq/csrc/example/: CMakeLists.txt  bert_example.cc  big_gpt_example.cc  gpt_example.cc  layer_example.h  llama_example.cc  operator_example.h  test_example.cpp  transformer_example.cc
lightseq/csrc/export/: big_gpt_export.py  hf_llama_export.py  util.py
lightseq/csrc/kernels/: CMakeLists.txt  crf.cu  cublas_algo_map.cpp  cublas_wrappers.cpp  cublas_wrappers.cu  cuda_util.cu  embKernels.cc.cu  embedding_kernels.cu  fused_adam_kernel.cu  gemm_test.cpp  general_kernels.cu  generation.cc.cu  normalize_kernels.cu  quantize_kernels.cu  softmax_kernels.cu  softmax_kernels_new.cu  t5EmbKernels.cc.cu  transform_kernels.cu  transform_kernels_new.cu
lightseq/csrc/layers/: cross_entropy_layer.cpp  quant_linear_layer.cpp  transformer_decoder_layer.cpp  transformer_embedding_layer.cpp  transformer_encoder_layer.cpp
lightseq/csrc/layers_new/: CMakeLists.txt  beam_search_topk.cu  crf_layer.cpp  dec_enc_attention_layer.cpp  dec_self_attention_layer.cpp  encdec_kv_layer.cpp  feed_forward_layer.cpp  generator_layer.cpp  gpt_attention_layer.cpp  gpt_layer.cpp  linear_layer.cpp  llama_attention_layer.cpp  llama_layer.cpp  llama_mlp_layer.cpp  multihead_attention_layer.cpp  sample_layer.cpp  sdpa_layer.cpp  self_attention_layer.cpp  transformer_decoder_layer.cpp  transformer_encoder_layer.cpp
lightseq/csrc/lsflow/: CMakeLists.txt  README.md  allocator.cpp  build.sh  context.cpp  layer.cpp  lsflow_util.cpp  manager.cpp  node.cpp  operator.cpp  shape.cpp  tensor.cpp  variable.cpp
lightseq/csrc/models/: CMakeLists.txt  bert.cc  bert_crf.cc  big_gpt.cc  gpt.cc  llama.cc  model_base.cc  model_util.cc  quant_bert.cc  test_layer.cc  transformer.cc  transformer.cu
lightseq/csrc/ops/: context.cpp  dropout.cpp  feed_forward.cpp  normalize_layer.cpp  normalize_layer_new.cpp  softmax.cpp  strided_batch_gemm.cpp
lightseq/csrc/ops_new/: CMakeLists.txt  act_elewise_product.cpp  beam_search_topk.cu  bias_act_dropout.cpp  bias_add_transform_20314.cpp  bias_dropout_residual.cpp  concat3_dim1.cpp  crf.cpp  dropout.cpp  feed_forward.cpp  fuse_add2_op.cpp  fuse_rotary_position_qkv.cpp  generation.cpp  launch_concat3_dim1.cpp  launch_dec_emb_op.cpp  launch_enc_emb.cpp  launch_gpt_emb.cpp  launch_llama_emb.cpp  layer_normalize.cpp  linear.cpp  normalize_layer.cpp  rms_layer_norm.cpp  rotary_position_qk.cpp  sampling.cc.cu  softmax.cpp  split_head_op.cpp  strided_batch_gemm.cpp  t5_softmax.cpp  transform_0213.cpp
lightseq/csrc/proto/: CMakeLists.txt  bert.proto  bert_crf.proto  bert_crf_weight.cc  bert_weight.cc  bert_weight.h  big_gpt.proto  big_gpt_weight.cc  gpt.proto  gpt_weight.cc  llama.proto  llama_weight.cc  proto_util.cc  quant_bert.proto  quant_bert_weight.cc  transformer.proto  transformer_weight.cc
lightseq/csrc/pybind/: CMakeLists.txt  __init__.py  pybind_adam.cpp  pybind_kernel.cpp  pybind_kernel_cuda.cpp  pybind_kernel_x86.cpp  pybind_layer.cpp  pybind_layer_new.cpp  pybind_model.cpp  pybind_op.cpp
lightseq/csrc/pytorch/: __init__.py  layer_base.py  quantization.py  sdpa_layers.py  torch_transformer_layers.py  transformer_decoder_layer.py  transformer_encoder_layer.py
lightseq/csrc/tests/: util.py
lightseq/csrc/tools/: util.cc.cu
lightseq/csrc/torch/: pybind_op.cpp
lightseq/csrc/triton_backend/: CMakeLists.txt
lightseq/inference/kernels/: CMakeLists.txt  XLMRKernels.cc.cu  XLMRKernels.h  common.h  embKernels.cc.cu  embKernels.h  embKernels_int8.cc.cu  embKernels_int8.h  generation.cc.cu  generation.h  gptKernels.cc.cu  gptKernels.h  gptKernels_int8.cc.cu  gptKernels_int8.h  moeKernels.cc.cu  moeKernels.h  t5EmbKernels.cc.cu  t5EmbKernels.h  t5Kernels.cc.cu  t5Kernels.h  transformerKernels.cc.cu  (+3 more)
model/: CMakeLists.txt  decoder.cc.cu  decoder.cu.cc  decoder.h  encoder.cc.cu  encoder.cu.cc  encoder.h  gpt_encoder.cc.cu  gpt_encoder.cu.cc  gpt_encoder.h
proto/: CMakeLists.txt  gpt.proto  gpt_weight.cc  gpt_weight.cu.cc  gpt_weight.h  transformer.proto  transformer_weight.cc  transformer_weight.cu.cc  transformer_weight.h
pywrapper/: CMakeLists.txt  gpt.cc.cu  transformer.cc.cu  transformer_decoder.cc.cu  transformer_decoder.cu.cc  wrapper.cc
tools/: CMakeLists.txt  util.cc.cu  util.cu.cc  util.h
(+804 files in other folders)
