cmake_minimum_required(VERSION 3.8)
find_package(Protobuf REQUIRED)

add_executable(gpt_generation_example gpt_generation.cc.cu)
target_link_libraries(gpt_generation_example PUBLIC -lcublas -lcudart)
target_link_libraries(gpt_generation_example PUBLIC gpt_model)
target_link_libraries(gpt_generation_example PUBLIC ${Protobuf_LIBRARY})
set_target_properties(gpt_generation_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)

add_executable(gptlm_example gptlm_example.cc.cu)
target_link_libraries(gptlm_example PUBLIC -lcublas -lcudart)
target_link_libraries(gptlm_example PUBLIC gpt_model)
target_link_libraries(gptlm_example PUBLIC ${Protobuf_LIBRARY})
set_target_properties(gptlm_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)

add_executable(transformer_example transformer_example.cc.cu)
target_link_libraries(transformer_example PUBLIC -lcublas -lcudart)
target_link_libraries(transformer_example PUBLIC transformer_model)
target_link_libraries(transformer_example PUBLIC ${Protobuf_LIBRARY})
set_target_properties(transformer_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)

add_executable(transformer_generate_example transformer_generate_example.cc.cu)
target_link_libraries(transformer_generate_example PUBLIC -lcublas -lcudart)
target_link_libraries(transformer_generate_example PUBLIC transformer_model)
target_link_libraries(transformer_generate_example PUBLIC ${Protobuf_LIBRARY})
set_target_properties(transformer_generate_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)